--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,20 +1,30 @@
 
-body{
-    text-align: center;
-    font-family: "Arial";
-    color: #333;
-    margin: 0;
-    padding: 0;
-}
+    body{
+        text-align: center;
+        font-family: "Arial";
+        color: #333;
+        margin: 0;
+        padding: 0;
+    }
 
-#container {
-    width: 70%;
-    padding: 1em;
-    text-align: left;
-    border: 1px solid darkblue;
-    margin: 0 auto;
-}
+    #container {
+        width: 70%;
+        padding: 1em;
+        text-align: left;
+        border: 1px solid darkblue;
+        margin: 0 auto;
+    
+    }
 
-#container h1{
-    font-size: 20px;
-}
+    #container h1{
+        font-size: 20px;
+    }
+
+    #cabecera{
+        background: #33a;
+        color: wheat;
+        font-weight: bold;
+        margin: 0;
+        padding: 0.5em;
+        box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+    }
