--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 
     body{
+        background: #1e1f24;
         text-align: center;
         font-family: Arial;
         color: #333;
@@ -21,10 +22,22 @@
     }
 
     #cabecera{
-        background: #33a;
+        background: #37488b;
         color: wheat;
         font-weight: bold;
         margin: 0;
         padding: 0.5em;
         box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
+    }
+
+    #cabecera #logo
+    {
+        width: 20px;
+        vertical-align: middle;
+    }
+
+    #post
+    {
+        background: white;
+        padding: 1er;
     }
