--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,3 +28,11 @@
         padding: 0.5em;
         box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.75);
     }
+
+    #footer{
+        background-color: #777;
+        color: white;
+        text-align: center;
+        padding: 0.5rem;
+
+    }
